Ok, it was a simple fix. SVG's have to have a height set otherwise they won't show up on ios... Weird.

--- a/snake.css
+++ b/snake.css
@@ -51,6 +51,7 @@ h2 {
 }
 
 svg {
+    height: 100%;
     max-height: 100%;
 }
 /*#endregion Generic */
@@ -71,6 +72,7 @@ svg {
 
 .start_button {
     background-color: var(--main-purple);
+    /* background-color: var(--main-orange); */
     border-radius: 15px;
     color: var(--main-white);
     font-size: 55px;
